fix: use spacing instead of custom margin

--- a/packages/forma-36-react-components/src/components/Card/AssetCard/AssetCard.css
+++ b/packages/forma-36-react-components/src/components/Card/AssetCard/AssetCard.css
@@ -2,6 +2,7 @@
 @import 'settings/typography';
 @import 'settings/transitions';
 @import 'settings/shadows';
+@import 'settings/dimensions';
 
 .AssetCard {
   height: calc(1rem * (300 / var(--font-base-default)));
@@ -51,9 +52,9 @@
 }
 
 .AssetCard__status {
-  margin-left: .5rem;
+  margin-left: var(--spacing-xs);
 }
 
 .AssetCard__actions {
-  margin-left: calc(1rem * (10 / var(--font-base-default)));
+  margin-left: calc(1rem * (10 / var(--font- -default)));
 }
